--- a/analisis_olist_sql.ipynb
+++ b/analisis_olist_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "e4d96dab",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "746479f5",
    "metadata": {},
    "outputs": [
@@ -68,60 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "c98b94f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Buscando archivos CSV en: C:\\Users\\diego\\Desktop\\olist\\olist_project\\olist_dataset\n",
-      "\n",
-      "Cargando 'olist_customers_dataset.csv' en la tabla de MySQL 'customers'...\n",
-      "Cargando 'olist_geolocation_dataset.csv' en la tabla de MySQL 'geolocation'...\n",
-      "Cargando 'olist_orders_dataset.csv' en la tabla de MySQL 'orders'...\n",
-      "Cargando 'olist_order_items_dataset.csv' en la tabla de MySQL 'order_items'...\n",
-      "Cargando 'olist_order_payments_dataset.csv' en la tabla de MySQL 'order_payments'...\n",
-      "Cargando 'olist_order_reviews_dataset.csv' en la tabla de MySQL 'order_reviews'...\n",
-      "Cargando 'olist_products_dataset.csv' en la tabla de MySQL 'products'...\n",
-      "Cargando 'olist_sellers_dataset.csv' en la tabla de MySQL 'sellers'...\n",
-      "Cargando 'product_category_name_translation.csv' en la tabla de MySQL 'product_category_name_translation'...\n",
-      "\n",
-      "¡Proceso de carga completado!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# --- RUTA EXACTA A TU CARPETA DE DATOS ---\n",
-    "csv_folder_path = r'C:\\Users\\diego\\Desktop\\olist\\olist_project\\olist_dataset'\n",
-    "\n",
-    "# --- BUCLE PARA CARGAR LOS ARCHIVOS ---\n",
-    "print(f\"Buscando archivos CSV en: {csv_folder_path}\\n\")\n",
-    "\n",
-    "for filename in os.listdir(csv_folder_path):\n",
-    "    if filename.endswith('.csv'):\n",
-    "        # Ruta completa a cada archivo CSV\n",
-    "        file_path = os.path.join(csv_folder_path, filename)\n",
-    "        \n",
-    "        # Leemos el archivo a un DataFrame\n",
-    "        df = pd.read_csv(file_path)\n",
-    "        \n",
-    "        # Creamos un nombre de tabla limpio\n",
-    "        table_name = filename.replace('olist_', '').replace('_dataset.csv', '').replace('.csv', '')\n",
-    "        \n",
-    "        print(f\"Cargando '{filename}' en la tabla de MySQL '{table_name}'...\")\n",
-    "        \n",
-    "        # Guardamos el DataFrame en MySQL usando nuestro 'engine'\n",
-    "        df.to_sql(table_name, con=engine, if_exists='replace', index=False, chunksize=10000)\n",
-    "        \n",
-    "print(\"\\n¡Proceso de carga completado!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "88076f9b",
+   "execution_count": 10,
+   "id": "2b9b6c58",
    "metadata": {},
    "outputs": [
     {
@@ -150,6 +98,83 @@
     "\n",
     "print(\"\\n--- Tablas creadas en la base de datos 'olist_db' ---\")\n",
     "print(tables_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ebc4f2cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tables_in_olist_db</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>geolocation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>order_items</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>order_payments</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>order_reviews</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Tables_in_olist_db\n",
+       "0          customers\n",
+       "1        geolocation\n",
+       "2        order_items\n",
+       "3     order_payments\n",
+       "4      order_reviews"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Usamos pd.read_sql para ejecutar la consulta y obtener un DataFrame\n",
+    "df_pedidos_clientes = pd.read_sql(query, engine)\n",
+    "\n",
+    "# Echamos un vistazo al resultado\n",
+    "df_pedidos_clientes.head()"
    ]
   }
  ],
