--- a/analisis_olist_sql.ipynb
+++ b/analisis_olist_sql.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2b9b6c58",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "ebc4f2cd",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "4         sao paulo             SP  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,16 +224,16 @@
     "# 1. Define la nueva consulta SQL para unir las tablas\n",
     "query_pedidos_clientes = \"\"\"\n",
     "SELECT\n",
-    "    o.order_id,\n",
-    "    o.order_status,\n",
-    "    c.customer_id,\n",
-    "    c.customer_unique_id,\n",
-    "    c.customer_city,\n",
-    "    c.customer_state\n",
+    "    orders.order_id,\n",
+    "    orders.order_status,\n",
+    "    customers.customer_id,\n",
+    "    customers.customer_unique_id,\n",
+    "    customers.customer_city,\n",
+    "    customers.customer_state\n",
     "FROM\n",
-    "    orders AS o\n",
+    "    orders\n",
     "LEFT JOIN\n",
-    "    customers AS c ON o.customer_id = c.customer_id\n",
+    "    customers ON orders.customer_id = customers.customer_id\n",
     "\"\"\"\n",
     "\n",
     "# 2. Ejecuta esa consulta específica y guárdala en un nuevo DataFrame\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "011b67d8",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "ddbf43aa",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "d4d46298",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "7564e27b",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
        "4  b525978184c53a6051f72e2343ffce0e               santos             SP  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,21 +476,21 @@
     "# En una nueva celda\n",
     "query_completa = \"\"\"\n",
     "SELECT\n",
-    "    o.order_id,\n",
-    "    o.order_status,\n",
-    "    o.order_purchase_timestamp, -- ¡Añadimos la fecha de compra!\n",
-    "    oi.product_id,\n",
-    "    oi.price, -- ¡Añadimos el precio del item!\n",
-    "    oi.freight_value, -- Y el coste del envío\n",
-    "    c.customer_unique_id,\n",
-    "    c.customer_city,\n",
-    "    c.customer_state\n",
+    "    orders.order_id,\n",
+    "    orders.order_status,\n",
+    "    orders.order_purchase_timestamp,\n",
+    "    order_items.product_id,\n",
+    "    order_items.price,\n",
+    "    order_items.freight_value,\n",
+    "    customers.customer_unique_id,\n",
+    "    customers.customer_city,\n",
+    "    customers.customer_state\n",
     "FROM\n",
-    "    orders AS o\n",
+    "    orders\n",
     "LEFT JOIN\n",
-    "    customers AS c ON o.customer_id = c.customer_id\n",
+    "    customers ON orders.customer_id = customers.customer_id\n",
     "LEFT JOIN\n",
-    "    order_items AS oi ON o.order_id = oi.order_id\n",
+    "    order_items ON orders.order_id = order_items.order_id\n",
     "\"\"\"\n",
     "\n",
     "# Ejecutamos la consulta y la guardamos en un DataFrame final\n",
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "b89ada4f",
    "metadata": {},
    "outputs": [
