--- a/analisis_olist_sql.ipynb
+++ b/analisis_olist_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "e4d96dab",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "ac7e1403",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "746479f5",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "2b9b6c58",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "ebc4f2cd",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "4         sao paulo             SP  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "011b67d8",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "ddbf43aa",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "d4d46298",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "7564e27b",
    "metadata": {},
    "outputs": [
@@ -371,6 +371,7 @@
        "      <th>order_id</th>\n",
        "      <th>order_status</th>\n",
        "      <th>order_purchase_timestamp</th>\n",
+       "      <th>order_delivered_customer_date</th>\n",
        "      <th>product_id</th>\n",
        "      <th>price</th>\n",
        "      <th>freight_value</th>\n",
@@ -385,6 +386,7 @@
        "      <td>02645c905eb7d1591a679f9bc3b669fd</td>\n",
        "      <td>delivered</td>\n",
        "      <td>2018-01-26 16:09:11</td>\n",
+       "      <td>2018-01-30 14:48:45</td>\n",
        "      <td>9f1c3e71d56894398a42b050b07f1baa</td>\n",
        "      <td>12.77</td>\n",
        "      <td>7.78</td>\n",
@@ -397,6 +399,7 @@
        "      <td>001c85b5f68d2be0cb0797afc9e8ce9a</td>\n",
        "      <td>delivered</td>\n",
        "      <td>2017-11-24 19:19:18</td>\n",
+       "      <td>2017-12-22 18:37:40</td>\n",
        "      <td>84f456958365164420cfc80fbe4c7fab</td>\n",
        "      <td>99.00</td>\n",
        "      <td>13.71</td>\n",
@@ -409,6 +412,7 @@
        "      <td>02ea547b6d2ee25305588fd50df58b46</td>\n",
        "      <td>shipped</td>\n",
        "      <td>2017-03-23 22:03:43</td>\n",
+       "      <td>None</td>\n",
        "      <td>b000447e24e31a4d7e628ca4d0622131</td>\n",
        "      <td>23.99</td>\n",
        "      <td>15.65</td>\n",
@@ -421,6 +425,7 @@
        "      <td>03054d8a8eefc2981cfad06f58e27979</td>\n",
        "      <td>delivered</td>\n",
        "      <td>2017-10-02 10:25:22</td>\n",
+       "      <td>2017-10-19 21:03:49</td>\n",
        "      <td>3e31fd1419cc4cd6adad1925e72e3a03</td>\n",
        "      <td>58.90</td>\n",
        "      <td>15.16</td>\n",
@@ -433,6 +438,7 @@
        "      <td>03ab852861cd75d0a9225c92a3354a3a</td>\n",
        "      <td>delivered</td>\n",
        "      <td>2017-12-10 10:03:25</td>\n",
+       "      <td>2017-12-16 17:08:12</td>\n",
        "      <td>374fb6698c278b6af1c7b7c8fb95585e</td>\n",
        "      <td>115.00</td>\n",
        "      <td>8.06</td>\n",
@@ -452,22 +458,29 @@
        "3  03054d8a8eefc2981cfad06f58e27979    delivered      2017-10-02 10:25:22   \n",
        "4  03ab852861cd75d0a9225c92a3354a3a    delivered      2017-12-10 10:03:25   \n",
        "\n",
-       "                         product_id   price  freight_value  \\\n",
-       "0  9f1c3e71d56894398a42b050b07f1baa   12.77           7.78   \n",
-       "1  84f456958365164420cfc80fbe4c7fab   99.00          13.71   \n",
-       "2  b000447e24e31a4d7e628ca4d0622131   23.99          15.65   \n",
-       "3  3e31fd1419cc4cd6adad1925e72e3a03   58.90          15.16   \n",
-       "4  374fb6698c278b6af1c7b7c8fb95585e  115.00           8.06   \n",
+       "  order_delivered_customer_date                        product_id   price  \\\n",
+       "0           2018-01-30 14:48:45  9f1c3e71d56894398a42b050b07f1baa   12.77   \n",
+       "1           2017-12-22 18:37:40  84f456958365164420cfc80fbe4c7fab   99.00   \n",
+       "2                          None  b000447e24e31a4d7e628ca4d0622131   23.99   \n",
+       "3           2017-10-19 21:03:49  3e31fd1419cc4cd6adad1925e72e3a03   58.90   \n",
+       "4           2017-12-16 17:08:12  374fb6698c278b6af1c7b7c8fb95585e  115.00   \n",
        "\n",
-       "                 customer_unique_id        customer_city customer_state  \n",
-       "0  2aa9325eab1676f4d62830f004d67a34  sao jose dos campos             SP  \n",
-       "1  55a269f324455e78349e7b9b7e7e5911            sao paulo             SP  \n",
-       "2  70a2aece5345a514bf960b01975aaa60         porto alegre             RS  \n",
-       "3  d46eb9ba6d6b75c1dac85b91911fc9c2            sao paulo             SP  \n",
-       "4  b525978184c53a6051f72e2343ffce0e               santos             SP  "
+       "   freight_value                customer_unique_id        customer_city  \\\n",
+       "0           7.78  2aa9325eab1676f4d62830f004d67a34  sao jose dos campos   \n",
+       "1          13.71  55a269f324455e78349e7b9b7e7e5911            sao paulo   \n",
+       "2          15.65  70a2aece5345a514bf960b01975aaa60         porto alegre   \n",
+       "3          15.16  d46eb9ba6d6b75c1dac85b91911fc9c2            sao paulo   \n",
+       "4           8.06  b525978184c53a6051f72e2343ffce0e               santos   \n",
+       "\n",
+       "  customer_state  \n",
+       "0             SP  \n",
+       "1             SP  \n",
+       "2             RS  \n",
+       "3             SP  \n",
+       "4             SP  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,21 +489,22 @@
     "# En una nueva celda\n",
     "query_completa = \"\"\"\n",
     "SELECT\n",
-    "    orders.order_id,\n",
-    "    orders.order_status,\n",
-    "    orders.order_purchase_timestamp,\n",
-    "    order_items.product_id,\n",
-    "    order_items.price,\n",
-    "    order_items.freight_value,\n",
-    "    customers.customer_unique_id,\n",
-    "    customers.customer_city,\n",
-    "    customers.customer_state\n",
+    "    o.order_id,\n",
+    "    o.order_status,\n",
+    "    o.order_purchase_timestamp,\n",
+    "    o.order_delivered_customer_date,  -- <<< ¡¡LA HEMOS AÑADIDO AQUÍ!!\n",
+    "    oi.product_id,\n",
+    "    oi.price,\n",
+    "    oi.freight_value,\n",
+    "    c.customer_unique_id,\n",
+    "    c.customer_city,\n",
+    "    c.customer_state\n",
     "FROM\n",
-    "    orders\n",
+    "    orders AS o\n",
     "LEFT JOIN\n",
-    "    customers ON orders.customer_id = customers.customer_id\n",
+    "    customers AS c ON o.customer_id = c.customer_id\n",
     "LEFT JOIN\n",
-    "    order_items ON orders.order_id = order_items.order_id\n",
+    "    order_items AS oi ON o.order_id = oi.order_id\n",
     "\"\"\"\n",
     "\n",
     "# Ejecutamos la consulta y la guardamos en un DataFrame final\n",
@@ -503,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "b89ada4f",
    "metadata": {},
    "outputs": [
