Implement code changes to enhance functionality and improve performance

--- a/analisis_olist_sql.ipynb
+++ b/analisis_olist_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "e4d96dab",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "ac7e1403",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "746479f5",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "2b9b6c58",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "ebc4f2cd",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "4         sao paulo             SP  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "011b67d8",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "ddbf43aa",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "d4d46298",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "7564e27b",
    "metadata": {},
    "outputs": [
@@ -378,73 +378,85 @@
        "      <th>customer_unique_id</th>\n",
        "      <th>customer_city</th>\n",
        "      <th>customer_state</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>payment_value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>02645c905eb7d1591a679f9bc3b669fd</td>\n",
+       "      <td>04497a3993ecf2e604b91ca0a8a80ecd</td>\n",
        "      <td>delivered</td>\n",
-       "      <td>2018-01-26 16:09:11</td>\n",
-       "      <td>2018-01-30 14:48:45</td>\n",
-       "      <td>9f1c3e71d56894398a42b050b07f1baa</td>\n",
-       "      <td>12.77</td>\n",
-       "      <td>7.78</td>\n",
-       "      <td>2aa9325eab1676f4d62830f004d67a34</td>\n",
-       "      <td>sao jose dos campos</td>\n",
-       "      <td>SP</td>\n",
+       "      <td>2017-09-17 23:21:05</td>\n",
+       "      <td>2017-09-26 16:48:05</td>\n",
+       "      <td>23227b07fc69250d2fa4be6602011aea</td>\n",
+       "      <td>64.90</td>\n",
+       "      <td>16.70</td>\n",
+       "      <td>a7c0ec3d377b3485df8ee19439e3b10d</td>\n",
+       "      <td>belo horizonte</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>credit_card</td>\n",
+       "      <td>81.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>001c85b5f68d2be0cb0797afc9e8ce9a</td>\n",
+       "      <td>048e6e4623dbf118c43e0f5572016faa</td>\n",
        "      <td>delivered</td>\n",
-       "      <td>2017-11-24 19:19:18</td>\n",
-       "      <td>2017-12-22 18:37:40</td>\n",
-       "      <td>84f456958365164420cfc80fbe4c7fab</td>\n",
-       "      <td>99.00</td>\n",
-       "      <td>13.71</td>\n",
-       "      <td>55a269f324455e78349e7b9b7e7e5911</td>\n",
-       "      <td>sao paulo</td>\n",
-       "      <td>SP</td>\n",
+       "      <td>2017-12-31 17:57:21</td>\n",
+       "      <td>2018-01-10 21:42:27</td>\n",
+       "      <td>a04087ab6a96ffa041f8a2701a72b616</td>\n",
+       "      <td>599.00</td>\n",
+       "      <td>58.63</td>\n",
+       "      <td>73c4efed8d45dab6e5e412c2f3594fe6</td>\n",
+       "      <td>cuite</td>\n",
+       "      <td>PB</td>\n",
+       "      <td>credit_card</td>\n",
+       "      <td>657.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>02ea547b6d2ee25305588fd50df58b46</td>\n",
-       "      <td>shipped</td>\n",
-       "      <td>2017-03-23 22:03:43</td>\n",
-       "      <td>None</td>\n",
-       "      <td>b000447e24e31a4d7e628ca4d0622131</td>\n",
-       "      <td>23.99</td>\n",
-       "      <td>15.65</td>\n",
-       "      <td>70a2aece5345a514bf960b01975aaa60</td>\n",
-       "      <td>porto alegre</td>\n",
-       "      <td>RS</td>\n",
+       "      <td>03ba96e3cd1a918f1e0126c93dd93bb5</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>2017-11-29 21:40:21</td>\n",
+       "      <td>2017-12-01 20:38:36</td>\n",
+       "      <td>4914f8796af2ecd359fd8f44b9b92339</td>\n",
+       "      <td>49.77</td>\n",
+       "      <td>7.78</td>\n",
+       "      <td>9dfe23c51c1758f1904a3fef4421b168</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>credit_card</td>\n",
+       "      <td>57.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>03054d8a8eefc2981cfad06f58e27979</td>\n",
+       "      <td>00bdcdda88e6b02977fc6ce3d412c600</td>\n",
        "      <td>delivered</td>\n",
-       "      <td>2017-10-02 10:25:22</td>\n",
-       "      <td>2017-10-19 21:03:49</td>\n",
-       "      <td>3e31fd1419cc4cd6adad1925e72e3a03</td>\n",
-       "      <td>58.90</td>\n",
-       "      <td>15.16</td>\n",
-       "      <td>d46eb9ba6d6b75c1dac85b91911fc9c2</td>\n",
-       "      <td>sao paulo</td>\n",
-       "      <td>SP</td>\n",
+       "      <td>2018-06-12 09:51:55</td>\n",
+       "      <td>2018-06-18 18:20:48</td>\n",
+       "      <td>20566af10fda4783935b8cef249fa4c3</td>\n",
+       "      <td>118.90</td>\n",
+       "      <td>18.93</td>\n",
+       "      <td>1148e7e1daf6d2378b814e90506e9d26</td>\n",
+       "      <td>rio de janeiro</td>\n",
+       "      <td>RJ</td>\n",
+       "      <td>credit_card</td>\n",
+       "      <td>137.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>03ab852861cd75d0a9225c92a3354a3a</td>\n",
+       "      <td>0123098b96f3d4014545642be53d891c</td>\n",
        "      <td>delivered</td>\n",
-       "      <td>2017-12-10 10:03:25</td>\n",
-       "      <td>2017-12-16 17:08:12</td>\n",
-       "      <td>374fb6698c278b6af1c7b7c8fb95585e</td>\n",
-       "      <td>115.00</td>\n",
-       "      <td>8.06</td>\n",
-       "      <td>b525978184c53a6051f72e2343ffce0e</td>\n",
-       "      <td>santos</td>\n",
+       "      <td>2017-08-15 11:02:55</td>\n",
+       "      <td>2017-08-29 23:47:27</td>\n",
+       "      <td>eb3569b5cae58e2c6f616f86d3fcd507</td>\n",
+       "      <td>99.90</td>\n",
+       "      <td>17.18</td>\n",
+       "      <td>f3719a64d17b893e959fbf553021d3b3</td>\n",
+       "      <td>cotia</td>\n",
        "      <td>SP</td>\n",
+       "      <td>credit_card</td>\n",
+       "      <td>117.08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -452,63 +464,68 @@
       ],
       "text/plain": [
        "                           order_id order_status order_purchase_timestamp  \\\n",
-       "0  02645c905eb7d1591a679f9bc3b669fd    delivered      2018-01-26 16:09:11   \n",
-       "1  001c85b5f68d2be0cb0797afc9e8ce9a    delivered      2017-11-24 19:19:18   \n",
-       "2  02ea547b6d2ee25305588fd50df58b46      shipped      2017-03-23 22:03:43   \n",
-       "3  03054d8a8eefc2981cfad06f58e27979    delivered      2017-10-02 10:25:22   \n",
-       "4  03ab852861cd75d0a9225c92a3354a3a    delivered      2017-12-10 10:03:25   \n",
+       "0  04497a3993ecf2e604b91ca0a8a80ecd    delivered      2017-09-17 23:21:05   \n",
+       "1  048e6e4623dbf118c43e0f5572016faa    delivered      2017-12-31 17:57:21   \n",
+       "2  03ba96e3cd1a918f1e0126c93dd93bb5    delivered      2017-11-29 21:40:21   \n",
+       "3  00bdcdda88e6b02977fc6ce3d412c600    delivered      2018-06-12 09:51:55   \n",
+       "4  0123098b96f3d4014545642be53d891c    delivered      2017-08-15 11:02:55   \n",
        "\n",
        "  order_delivered_customer_date                        product_id   price  \\\n",
-       "0           2018-01-30 14:48:45  9f1c3e71d56894398a42b050b07f1baa   12.77   \n",
-       "1           2017-12-22 18:37:40  84f456958365164420cfc80fbe4c7fab   99.00   \n",
-       "2                          None  b000447e24e31a4d7e628ca4d0622131   23.99   \n",
-       "3           2017-10-19 21:03:49  3e31fd1419cc4cd6adad1925e72e3a03   58.90   \n",
-       "4           2017-12-16 17:08:12  374fb6698c278b6af1c7b7c8fb95585e  115.00   \n",
+       "0           2017-09-26 16:48:05  23227b07fc69250d2fa4be6602011aea   64.90   \n",
+       "1           2018-01-10 21:42:27  a04087ab6a96ffa041f8a2701a72b616  599.00   \n",
+       "2           2017-12-01 20:38:36  4914f8796af2ecd359fd8f44b9b92339   49.77   \n",
+       "3           2018-06-18 18:20:48  20566af10fda4783935b8cef249fa4c3  118.90   \n",
+       "4           2017-08-29 23:47:27  eb3569b5cae58e2c6f616f86d3fcd507   99.90   \n",
        "\n",
-       "   freight_value                customer_unique_id        customer_city  \\\n",
-       "0           7.78  2aa9325eab1676f4d62830f004d67a34  sao jose dos campos   \n",
-       "1          13.71  55a269f324455e78349e7b9b7e7e5911            sao paulo   \n",
-       "2          15.65  70a2aece5345a514bf960b01975aaa60         porto alegre   \n",
-       "3          15.16  d46eb9ba6d6b75c1dac85b91911fc9c2            sao paulo   \n",
-       "4           8.06  b525978184c53a6051f72e2343ffce0e               santos   \n",
+       "   freight_value                customer_unique_id   customer_city  \\\n",
+       "0          16.70  a7c0ec3d377b3485df8ee19439e3b10d  belo horizonte   \n",
+       "1          58.63  73c4efed8d45dab6e5e412c2f3594fe6           cuite   \n",
+       "2           7.78  9dfe23c51c1758f1904a3fef4421b168       sao paulo   \n",
+       "3          18.93  1148e7e1daf6d2378b814e90506e9d26  rio de janeiro   \n",
+       "4          17.18  f3719a64d17b893e959fbf553021d3b3           cotia   \n",
        "\n",
-       "  customer_state  \n",
-       "0             SP  \n",
-       "1             SP  \n",
-       "2             RS  \n",
-       "3             SP  \n",
-       "4             SP  "
+       "  customer_state payment_type  payment_value  \n",
+       "0             MG  credit_card          81.60  \n",
+       "1             PB  credit_card         657.63  \n",
+       "2             SP  credit_card          57.55  \n",
+       "3             RJ  credit_card         137.83  \n",
+       "4             SP  credit_card         117.08  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# En una nueva celda\n",
-    "query_completa = \"\"\"\n",
+    "query_final_v2 = \"\"\"\n",
     "SELECT\n",
     "    o.order_id,\n",
     "    o.order_status,\n",
     "    o.order_purchase_timestamp,\n",
-    "    o.order_delivered_customer_date,  -- <<< ¡¡LA HEMOS AÑADIDO AQUÍ!!\n",
+    "    o.order_delivered_customer_date,\n",
     "    oi.product_id,\n",
     "    oi.price,\n",
     "    oi.freight_value,\n",
     "    c.customer_unique_id,\n",
     "    c.customer_city,\n",
-    "    c.customer_state\n",
+    "    c.customer_state,\n",
+    "    p.payment_type,       -- <--- COLUMNA AÑADIDA\n",
+    "    p.payment_value       -- <--- COLUMNA AÑADIDA\n",
     "FROM\n",
     "    orders AS o\n",
     "LEFT JOIN\n",
     "    customers AS c ON o.customer_id = c.customer_id\n",
     "LEFT JOIN\n",
     "    order_items AS oi ON o.order_id = oi.order_id\n",
+    "LEFT JOIN\n",
+    "    order_payments AS p ON o.order_id = p.order_id  -- <--- JOIN AÑADIDO\n",
     "\"\"\"\n",
+    "# NOTA: He añadido alias (AS o, AS c, etc.) para hacer la consulta más limpia y profesional.\n",
+    "\n",
     "\n",
     "# Ejecutamos la consulta y la guardamos en un DataFrame final\n",
-    "df_para_powerbi = pd.read_sql(query_completa, engine)\n",
+    "df_para_powerbi = pd.read_sql(query_final_v2, engine)\n",
     "\n",
     "# Verificamos\n",
     "print(\"DataFrame final para Power BI:\")\n",
@@ -517,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "b89ada4f",
    "metadata": {},
    "outputs": [
@@ -535,6 +552,51 @@
     "df_para_powerbi.to_csv('olist_analisis.csv', index=False)\n",
     "\n",
     "print(\"\\nArchivo 'olist_analisis.csv' creado con éxito. ¡Listo para Power BI!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "889df99b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo 'clist_analisis.csv' guardado/actualizado correctamente en la carpeta del proyecto.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_para_powerbi.to_csv('clist_analisis.csv', index=False)\n",
+    "\n",
+    "# Añadimos un print para estar 100% seguros de que se ha ejecutado\n",
+    "print(\"Archivo 'clist_analisis.csv' guardado/actualizado correctamente en la carpeta del proyecto.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4760cd32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo 'clist_analisis.csv' actualizado con éxito con los datos de pago.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejecutamos la nueva consulta para obtener el DataFrame completo\n",
+    "df_final_v2 = pd.read_sql(query_final_v2, engine)\n",
+    "\n",
+    "# Sobrescribimos el archivo CSV con la nueva versión\n",
+    "df_final_v2.to_csv('clist_analisis.csv', index=False)\n",
+    "\n",
+    "print(\"Archivo 'clist_analisis.csv' actualizado con éxito con los datos de pago.\")"
    ]
   }
  ],
